# vega

./: .gitignore
Config/: DefaultGame.ini
Content/: Main.umap  Main_BuiltData.uasset  NewMap.umap  NewMap_BuiltData.uasset  UI_TestActor.uasset  UI_TestGameMode.uasset
Content/_UI/: UI_Chat.uasset  UI_Crew.uasset  UI_Help.uasset  UI_Main.uasset  UI_Notes.uasset  UI_Opt_Controls.uasset  UI_Opt_Gameplay.uasset  UI_Opt_Main.uasset  UI_Options.uasset  UI_Ship.uasset  UI_Stats.uasset  UI__Main.uasset
Source/: .gitignore
Source/cmake/: .gitignore  CMakeCache.txt  CMakeLists.txt  HowToCompile.txt  Makefile  cmake_install.cmake  compile_commands.json
Source/conan/: .gitignore  Makefile  compile_commands.json  conan_ycm_extra_conf.py  conan_ycm_flags.json  conanbuildinfo.cmake  conanbuildinfo.gcc  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
Source/dat/: commands.json  items.json  test.json
Source/inc/: actor.hpp  book.hpp  case.hpp  commander.hpp  filepath.h  fun.hpp  narrator.hpp  page.hpp  project.hpp  state.hpp
Source/src/: Makefile  actor.cpp  book.cpp  book.hpp  case.cpp  commander.cpp  filepath.cpp  fun.cpp  main.cpp  narrator.cpp  narrator.hpp  project.cpp  state.cpp
